--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,21 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="wrapper">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+          class="input"
+        />
+        <button type="submit" class="btn">
+          <svg>
+            <use href="./images/search.svg#icon-search"></use>
+          </svg>
+        </button>
+      </form>
+    </div>
   </body>
 </html>
