--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,8 @@
         </button>
       </form>
     </div>
+    <main>
+      <div class="container"><div class="gallery"></div></div>
+    </main>
   </body>
 </html>
