--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
       </form>
     </div>
     <main>
-      <div class="container"><div class="gallery"></div></div>
+      <div class="container">
+        <div class="gallery"></div>
+        <button type="button" class="load-more"><span>Load more</span></button>
+      </div>
     </main>
   </body>
 </html>
