--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -25,6 +32,9 @@
       </form>
     </div>
     <main>
+      <div id="scroll-top" class="is-show is-show_off">
+        <i class="fa-solid fa-circle-arrow-up"></i>
+      </div>
       <div class="container">
         <div class="gallery"></div>
         <button type="button" class="load-more is-hidden">
